# lorrystream

./: .dockerignore  .env  .gitignore  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: oci.yml  tests.yml
doc/: backlog.rst  conf.py  development.rst  index.md  operations.rst  prior-art.rst  research-new.rst  research.rst
doc/carabas/: backlog.md  index.md  research.md
doc/carabas/dms/: handbook.md  index.md  mysql.md  postgresql.md
doc/carabas/kcl/: dynamodb-standalone.md  dynamodb.md  kinesis.md
doc/carabas/lambda/: index.md
doc/singer/: cratedb.md  index.md  intro.md
doc/sink/: database.rst
doc/source/: amqp.rst  kinesis.md  mqtt.rst
examples/: appsink.py  parse_launch.py  tap.py  transform.py
examples/aws/: dynamodb_kinesis_lambda_oci_cratedb.py  kinesis_publish.py  kinesis_subscribe.py  rds_postgresql_kinesis_lambda_oci_cratedb.py
lorrystream/: __init__.py  cli.py  cmd.py  core.py  exceptions.py  model.py
lorrystream/carabas/: backlog.md
lorrystream/carabas/aws/: __init__.py  model.py  stack.py
lorrystream/carabas/aws/cf/: dms_next.py
lorrystream/carabas/aws/function/: model.py  oci.py  zip.py
lorrystream/carabas/aws/stack/: dms.py  dynamodb.py
lorrystream/dynamodb_cloud/: README.md  backlog.md  decoder.py  dynamodb_cdc_processor.properties  dynamodb_cdc_processor.py  launch.sh  requirements.txt  test_decoder.py
lorrystream/dynamodb_standalone/: README.md  amazon_kclpy_helper.py
lorrystream/kinesis/: README.md  publish.py  record_processor.properties  record_processor.py
lorrystream/process/: kinesis_cratedb_lambda.py
lorrystream/spike/kcl_dynamodb/: dynamodb_cdc_processor.properties  dynamodb_cdc_processor.py  requirements.txt
lorrystream/spike/kcl_kinesis/: amazon_kclpy_helper.py  publish.py  record_processor.properties  record_processor.py  requirements.txt
lorrystream/spike/kinesis/: publish.py  requirements.txt  subscribe.py
lorrystream/streamz/: LICENSE  README.rst  amqp.py  amqp_async.py  amqp_blocking.py  model.py  sinks.py  sources.py
lorrystream/transform/: dynamodb.py
lorrystream/util/: about.py  aio.py  cli.py  common.py  data.py
lorrystream/util/python/: bundle.py  pep723.py
release/oci/: Dockerfile  selftest.sh
tests/: conftest.py  test_cli.py  test_engine.py  test_kinesis.py  test_process.py  util.py
tests/carabas/: test_dms.py  test_function.py
tests/fixtures/: amqp.py  localstack.py
tests/testcontainers/: cratedb.py
tests/testdata/: README.rst  basic.ndjson  kinesis_dms.json  kinesis_dynamodb.json
tests/transform/: test_dynamodb.py
