[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[project]
name = "lorrystream"
description = "A light-weight, polyglot event- or stream-processing system, which can be used as a data backplane-, message relay-, and pipeline-subsystem."
readme = "README.rst"
keywords = [
  "amqp",
  "data",
  "export",
  "import",
  "mqtt",
  "pandas",
  "rdbms",
  "sql",
  "stream",
]
license = { text = "MIT" }
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
  { name = "Richard Pobering", email = "richard.pobering@panodata.org" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "click<9",
  "colorama<1",
  "colorlog",
  "crate[sqlalchemy]",
  "dask",
  "influxdb",
  "influxdb-client[ciso]",
  "paho-mqtt",
  "pandas<2.3",
  "streamz",
  "toolz",
  "yarl<2",
]
[project.optional-dependencies]
develop = [
  "black<25",
  "mypy==1.8.0",
  "poethepoet<0.26",
  "pyproject-fmt<1.8",
  "ruff==0.3.0",
  "validate-pyproject<0.17",
]
release = [
  "build<2",
  'minibump<1; python_version >= "3.10"',
  "twine<6",
]
test = [
  "cratedb-toolkit[testing]==0.0.8",
  "pytest<9",
  "pytest-asyncio-cooperative",
  "pytest-cov<5",
  "pytest-mqtt",
]
[project.urls]
changelog = "https://github.com/daq-tools/lorrystream/blob/main/CHANGES.rst"
documentation = "https://github.com/daq-tools/lorrystream"
homepage = "https://github.com/daq-tools/lorrystream"
repository = "https://github.com/daq-tools/lorrystream"
[project.scripts]
lorry = "lorrystream.cli:cli"
[project.entry-points."streamz.sinks"]
dataframe_to_sql = "lorrystream.streamz.sinks:dataframe_to_sql"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = false
omit = [
  "tests/*",
]
source = ["lorrystream"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.mypy]
packages = ["lorrystream"]
exclude = [
]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
non_interactive = true

[tool.pytest.ini_options]
#addopts = "-rA --verbosity=3 --cov --cov-report=term-missing --cov-report=xml"
addopts = "-rA --verbosity=3"
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
log_format = "%(asctime)-15s [%(name)-24s] %(levelname)-8s: %(message)s"
testpaths = [
  "lorrystream",
  "tests",
]
xfail_strict = true
markers = [
  "slow",
]

[tool.ruff]
line-length = 120

select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # return
  "RET",
]

extend-ignore = [
  # zip() without an explicit strict= parameter
  "B905",
  # df is a bad variable name. Be kinder to your future self.
  "PD901",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
]

extend-exclude = [
  "amqp-to-mqtt.py",
  "workbench.py",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Use of `assert` detected
"examples/*" = ["T201"]  # Allow `print`
"lorrystream/util/about.py" = ["T201"]  # Allow `print`

[tool.setuptools.packages.find]
namespaces = false


# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]

check = [
  "lint",
  "test",
]

format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt pyproject.toml" },
]

lint = [
  { cmd = "ruff ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]

release = [
  { cmd = "minibump bump --relax minor" },
  { cmd = "python -m build" },
  { cmd = "twine upload dist/*" },
]

test = { cmd = "pytest" }
